# herdr

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Cargo.toml  deny.toml  flake.nix
.github/workflows/: latest-branch.yml
assets/web/: index.html
docs/adr/: 0001-web-bridge-hosting-and-transport.md
docs/next/website/src/content/docs/: configuration.mdx
nix/: package.nix
src/: agent_resume.rs  cli.rs  config.rs  events.rs  layout.rs  logging.rs  main.rs  pane.rs  peers.rs  remote.rs  system_stats.rs  ui.rs  workspace.rs
src/api/: client.rs  mod.rs  schema.rs  server.rs
src/app/: actions.rs  api.rs  creation.rs  ids.rs  mod.rs  runtime.rs  state.rs  worktrees.rs
src/app/api/: panes.rs  peers.rs
src/app/input/: mod.rs  modal.rs  mouse.rs  navigate.rs  sidebar.rs  terminal.rs
src/cli/: integration.rs  pane.rs
src/client/: mod.rs  slots.rs
src/config/: keybinds.rs  model.rs
src/detect/: mod.rs
src/detect/agents/: qodercli.rs
src/input/: encode.rs
src/integration/: mod.rs
src/integration/assets/claude/: herdr-agent-state.sh
src/pane/: terminal.rs
src/persist/: restore.rs  snapshot.rs
src/protocol/: render_ansi.rs  wire.rs
src/server/: client_transport.rs  headless.rs
src/terminal/: prompt_history.rs  runtime.rs  state.rs
src/ui/: dialogs.rs  float.rs  grammar.rs  keybind_help.rs  panes.rs  sidebar.rs  status.rs
src/web/: mod.rs
tests/: api_ping.rs  cli_wrapper.rs  client_mode.rs  cross_area.rs  detach_reattach.rs  multi_client.rs  peer_federation.rs  server_headless.rs
tests/support/: mod.rs
website/src/content/docs/: configuration.mdx
