[package]
name = "herdr"
version = "0.6.8"
edition = "2021"
build = "build.rs"
description = "terminal workspace manager for AI coding agents"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ogulcancelik/herdr"
homepage = "https://herdr.dev"
keywords = ["terminal", "tui", "ai", "agents", "multiplexer"]
categories = ["command-line-utilities"]
include = ["src/**/*", "assets/sounds/*", "assets/web/**/*", "README.md", "LICENSE", "Cargo.toml"]

[features]
# `herdr web`: xterm.js <-> herdr PTY bridge (gerchowl/herdr#131). Kept behind a
# feature so axum/futures-util/rust-embed stay out of a default `herdr` build.
# tokio/net + tokio/io-util are the runtime drivers axum needs for `axum::serve`.
web = ["dep:anyhow", "dep:axum", "dep:futures-util", "dep:rust-embed", "tokio/net", "tokio/io-util"]

[dependencies]
anyhow = { version = "1", optional = true }
axum = { version = "0.7", features = ["ws"], optional = true }
base64 = "0.22.1"
bincode = { version = "2", features = ["serde"] }
bytes = "1"
crossterm = "0.29"
ctrlc = { version = "3", features = ["termination"] }
futures-util = { version = "0.3", optional = true }
libc = "0.2"
portable-pty = "0.9"
rust-embed = { version = "8", optional = true }
png = "0.17"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
toml = "0.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
unicode-width = "0.2"
sysinfo = "0.39.3"
